2.5.2:
------

- Added chinese (traditional) translation (thank you Hsiu-Ming Chang)

- Updated japanese translation

- Fixed bug (Error: Language packages were not installed causing updates to get stuck)

Mac OS X:
---------

- Compiled with Qt 5.8


2.5.1:
------

- Added the possibility to uninstall the adult sites from your system and ignore them (no updates)
- Added a new startup parameter "-resetmessages" for display again all the starting messages (welcome window, adults sites request and change-log)
- Added a new startup parameter "-showchangelog" for display again the change-log of current version

- Fixed bug (Error: Erratic main window centering on startup when more than one monitor was connected)

Windows:
--------

- Fixed bug (Error: Information window was too small)

Mac OS X:
---------

- Compiled with Qt 5.2
- Added Mac OS X Mavericks compatibility
- Restored compatibility with Mac OS X Leopard (10.6.x)
- Removed the QWebView module dependence (now the native WebView is used again and reduced the final binary size)


2.5:
----

- Compiled with Qt 5.0.2

- Added finnish translation (thanks to Tuomas Lähteenmäki)
- Added bulgarian translation (thanks to Vasil Stoev)
- Added the HTTPS protocol as valid
- Added 15 new plugins:
	- MySpace
	- ExtremeTube (thanks to crapmaster)
	- Real GF Porn (thanks to crapmaster)
	- Macho Video (thanks to crapmaster)
	- Totally nsfw (thanks to crapmaster)
	- Totally Crap (thanks to crapmaster)
	- Totally Up Yours (thanks to crapmaster)
	- My girlfriend vids (thanks to crapmaster)
	- Home made voyeur (thanks to crapmaster)
	- WTF People (thanks to crapmaster)
	- Stolen XXX Videos (thanks to crapmaster)
	- Newsfilter (thanks to crapmaster)
	- m90 (thanks to crapmaster)
	- GirlfriendVids (thanks to crapmaster)
	- PornTube (thanks to crapmaster)

- Changed plug-ins:
	- YouTube
	- Google Videos
	- TV3 a la Carta
	- Yuvutu (thanks to crapmaster)
	- Xhamster
	- Jizzhut
	- XTube
	- Youporn
	- Clipfish
